Fix text alignment that overrides WYSIWYG styles.

--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -253,7 +253,7 @@ div.main-content {
   font-family: nimbus-sans, sans-serif;
   padding: 20px 0;
 
-  p {
+  p:not([class]) {
     text-align: justify;
   }
 }
